--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
 		"source.fixAll.stylelint": "explicit"
 	},
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"editor.formatOnSave": true,
+	"editor.formatOnSave": false,
 	"editor.insertSpaces": true,
 	"editor.tabSize": 2,
 	"editor.quickSuggestions": {
